--- a/components/v2/Cover/styles.scss
+++ b/components/v2/Cover/styles.scss
@@ -85,7 +85,7 @@
 
         .title_box{
             margin-top: 0;
-            position: absolute;
+            position: fixed;
             bottom: 40px;
 
             h1 {
