--- a/components/v2/Cover/styles.scss
+++ b/components/v2/Cover/styles.scss
@@ -85,8 +85,8 @@
 
         .title_box{
             margin-top: 0;
-            position: fixed;
-            bottom: 40px;
+            position: absolute;
+            bottom: 80px;
 
             h1 {
                 font-size: 32px;
