--- a/app/automacao/styles.scss
+++ b/app/automacao/styles.scss
@@ -3,6 +3,6 @@
     min-height: 100vh;
 
     /* POR CAUSA DO MENU FIXADO NO TOPO */
-    padding: 20px;
+    // padding: 20px;
     padding-top: 105px;
 }
