--- a/components/v2/ServicesSection/styles.scss
+++ b/components/v2/ServicesSection/styles.scss
@@ -16,7 +16,7 @@
     .bg {
         width: 500px;
         position: absolute;
-        right: 40px;
+        right: 0;
         top: 50%;
         transform: translateY(-50%);
 
@@ -24,6 +24,12 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+        }
+    }
+
+    @media(max-width: 1024px){
+        .bg {
+            display: none;
         }
     }
 }
