--- a/components/v2/Slider/styles.scss
+++ b/components/v2/Slider/styles.scss
@@ -1,13 +1,11 @@
 #slider {
-    // border: 1px solid red;
-    max-width: 950px;
-    // width: 70vw;
+    max-width: 1100px;
     overflow: hidden;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    right: 390px;
-    left: 20px;
+    left: 40px;
+    right: 350px;
     overflow-x: auto;
     
     .rail {
@@ -15,5 +13,11 @@
         display: flex;
         gap: 20px;
         margin-bottom: 20px;
+    }
+
+    @media(max-width: 1024px){
+        max-width: 100%;
+        left: 20px;
+        right: 20px;
     }
 }
