responsivo do ServiceItem

--- a/components/v2/ServiceItem/styles.scss
+++ b/components/v2/ServiceItem/styles.scss
@@ -34,10 +34,10 @@
         pointer-events: none;
     }
 
-    @media(max-width: 1024px){
-        width: 160px;
-        height: 180px;
-        font-size: 12px;
-        padding: 18px 14px;
-    }
+    // @media(max-width: 1024px){
+    //     width: 160px;
+    //     height: 180px;
+    //     font-size: 12px;
+    //     padding: 18px 14px;
+    // }
  }
