--- a/components/v2/ServicesSection/styles.scss
+++ b/components/v2/ServicesSection/styles.scss
@@ -32,4 +32,21 @@
             display: none;
         }
     }
+
+    @media(max-width: 460px){
+        .bg {
+            display: none;
+        }
+        
+        h2 {
+            max-width: 600px;
+            width: 100%;
+            position: absolute;
+            top: calc(50% - 200px);
+            transform: translateY(-50%);
+            left: 0;
+            padding-left: 20px;
+            font-size: 24px;
+        }
+    }
 }
