--- a/components/v2/Form/styles.scss
+++ b/components/v2/Form/styles.scss
@@ -1,32 +1,41 @@
 #form_container {
     max-width: 360px;
-
+    margin-left: 5%;
+    
     .budget_button {
         width: 100%;
         border-radius: 8px;
     }
 
+    h2, .bullet {
+        position: relative;
+        z-index: 1;
+    }
+    
     h2 {
         font-size: 32px;
         margin-bottom: 28px;
+        position: relative;
     }
-
+    
     .bullet {
         margin-left: 14px;
         font-size: 14px;
         margin-bottom: 14px;
         line-height: 24px;
-
+        
         &:nth-child(3) {
             margin-bottom: 28px;
         }
     }
-
+    
     .form {
         display: flex;
         flex-direction: column;
         max-width: 360px;
         gap: 18px;
+        position: relative;
+        z-index: 1;
 
         label input,  textarea {
             width: 100%;
@@ -62,10 +71,19 @@
         }
 
         textarea {
-            height: 200px;
+            height: 150px;
             padding: 14px;
             font-size: 14px;
             resize: none;
+
         }
+    }
+
+    @media(max-width: 768px){
+        max-width: 320px;
+    }
+
+    @media(max-width: 465px){
+        margin: 0 auto;
     }
 }
