--- a/components/v2/FormSection/styles.scss
+++ b/components/v2/FormSection/styles.scss
@@ -18,4 +18,10 @@
             object-fit: cover;
         }
     }
+
+    @media(max-width: 425px){
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
