--- a/components/v2/ServicesSection/styles.scss
+++ b/components/v2/ServicesSection/styles.scss
@@ -28,6 +28,17 @@
     }
 
     @media(max-width: 1024px){
+        // border: 1px solid red;
+        min-height: 500px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+
+        h2 {
+            position: relative;
+            left: 20px;
+        }
+
         .bg {
             display: none;
         }
