--- a/components/v2/Slider/styles.scss
+++ b/components/v2/Slider/styles.scss
@@ -17,7 +17,9 @@
 
     @media(max-width: 1024px){
         max-width: 100%;
-        left: 20px;
-        right: 20px;
+
+        position: relative;
+        top: 0;
+        transform: translateY(0);
     }
 }
