--- a/components/v2/Slider/styles.scss
+++ b/components/v2/Slider/styles.scss
@@ -21,5 +21,14 @@
         position: relative;
         top: 0;
         transform: translateY(0);
+
+        left: 0;
+        // right: 20px;
+        // margin-right: 20px;
+
+        .rail {
+            padding-left: 20px;
+            padding-right: 20px;
+        }
     }
 }
