--- a/components/v2/Benefits/styles.scss
+++ b/components/v2/Benefits/styles.scss
@@ -16,4 +16,15 @@
         flex-direction: column;
         gap: 40px;
     }
+
+    @media(max-width: 1024px){
+        flex-direction: column;
+        gap: 40px;
+    }
+
+    @media(max-width: 460px){
+        h2 {
+            font-size: 24px;
+        }
+    }
 }
