--- a/components/v2/Chip/styles.scss
+++ b/components/v2/Chip/styles.scss
@@ -1,3 +1,15 @@
+@keyframes float {
+    0% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(14px);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+
 .chip {
     background-color: #fff;
     color: #000;
@@ -7,4 +19,5 @@
     position: absolute;
     left: 0;
     top: 0;
+    animation: float 5s ease-in-out infinite;
 }
