--- a/components/v2/ServicesSection/styles.scss
+++ b/components/v2/ServicesSection/styles.scss
@@ -19,6 +19,7 @@
         right: 0;
         top: 50%;
         transform: translateY(-50%);
+        pointer-events: none;
 
         img {
             width: 100%;
