--- a/components/v2/UserCard/styles.scss
+++ b/components/v2/UserCard/styles.scss
@@ -98,7 +98,7 @@
                     position: relative;
                     top: 3px;
                     margin: 0 2px;
-                    color: #721AE7;
+                    color: #fff;
                     animation: pulse 1.5s alternate infinite;
                 }
             }
