--- a/components/v2/BenefitItem/styles.scss
+++ b/components/v2/BenefitItem/styles.scss
@@ -1,3 +1,15 @@
+@keyframes float {
+    0% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(14px);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+
 .benefit_item {
     display: flex;
     align-items: center;
@@ -5,6 +17,7 @@
 
     .icon {
         display: flex;
+        animation: float 5s ease-in-out infinite;
 
         .bg_effect,  .icon_bg {
             width: 48px;
