--- a/components/v2/Form/styles.scss
+++ b/components/v2/Form/styles.scss
@@ -1,3 +1,12 @@
+@keyframes pulse {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
 #form_container {
     max-width: 360px;
     margin-left: 5%;
@@ -26,6 +35,15 @@
         
         &:nth-child(3) {
             margin-bottom: 28px;
+        }
+
+        &::before {
+            content: '\2022';
+            font-size: 14px;
+            position: relative;
+            margin: 0 2px;
+            color: #fff;
+            animation: pulse 1.5s alternate infinite;
         }
     }
     
