--- a/components/v2/ServiceItem/styles.scss
+++ b/components/v2/ServiceItem/styles.scss
@@ -1,3 +1,21 @@
+@keyframes pulse {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
+@keyframes nonAnimation {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 .service_item {
     width: 220px;
     height: 250px;
@@ -15,6 +33,7 @@
         border-radius: 50%;
         display: grid;
         place-items: center;
+        animation: pulse 1.5s ease-in alternate infinite;
 
         p {
             opacity: 0.8;
