--- a/components/v2/ServicesSection/styles.scss
+++ b/components/v2/ServicesSection/styles.scss
@@ -11,6 +11,7 @@
         transform: translateY(-50%);
         left: 20px;
         font-size: 32px;
+        display: inline-block;
     }
 
     .bg {
