--- a/components/v2/Cover/styles.scss
+++ b/components/v2/Cover/styles.scss
@@ -48,6 +48,7 @@
         right: 180px;
         bottom: 0;
         pointer-events: none;
+        opacity: 0.6;
 
         img {
             object-fit: cover;
