--- a/components/v2/Form/styles.scss
+++ b/components/v2/Form/styles.scss
@@ -91,9 +91,9 @@
         textarea {
             height: 150px;
             padding: 14px;
-            font-size: 14px;
+            font-size: 13.5px;
             resize: none;
-
+            font-family: inherit;
         }
     }
 
