--- a/components/v2/ServiceItem/styles.scss
+++ b/components/v2/ServiceItem/styles.scss
@@ -52,4 +52,9 @@
         border-radius: 14px;
         pointer-events: none;
     }
+
+    .description {
+        font-size: 15px;
+        opacity: 0.8;
+    }
  }
