projetos do portfólio

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -5,6 +5,7 @@
     outline: none;
     text-decoration: none;
     color: #fff;
+    border: none;
     list-style: none;
 }
 
@@ -26,6 +27,7 @@ body, html {
     --gray2: #202226;
     --gray3: #2E2E32;
     --gray4: #656D72;
+    --main-bg: #0C0B1C;
 }
 
 p, span, h1 {
