--- a/components/v1/Header/styles.scss
+++ b/components/v1/Header/styles.scss
@@ -12,7 +12,7 @@
 
 #portfolio_header {
     width: 100%;
-    background-color: var(--bg);
+    background-color: var(--main-bg);
     border-bottom: 2px solid #202226;
     height: 84px;
     z-index: 3;
