[update] atualizando o portfolio

--- a/app/portfolio/styles.scss
+++ b/app/portfolio/styles.scss
@@ -1,4 +1,50 @@
-#portfolio {
-    overflow: hidden;
-    // height: 100%;
+#automation_page {
+    background-color: #0C0B1C;
+    min-height: 100vh;
+
+    /* POR CAUSA DO MENU FIXADO NO TOPO */
+    // padding: 20px;
+    padding-top: 105px;
+}
+
+*::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+
+*::-webkit-scrollbar-track {
+    background: #0C0B1C;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #721AE7;
+    border-radius: 20px;
+
+    &:hover {
+        background-color: #8D1AE7;
+    }
+}
+
+@media(max-width: 768px){
+    #automation_page {
+        padding-top: 84px;
+    }
+
+    *::-webkit-scrollbar {
+        display: none;
+    }
+    
+    *::-webkit-scrollbar-track {
+        display: none;
+    }
+    
+    *::-webkit-scrollbar-thumb {
+        display: none;
+    }
+}
+
+@media(max-width: 425px){
+    #automation_page {
+        padding-top: 66px;
+    }
 }
