ajustes no portfólio

--- a/components/v2/InfiniteListItem/styles.scss
+++ b/components/v2/InfiniteListItem/styles.scss
@@ -3,6 +3,7 @@
     padding: 8px 24px;
     border-radius: 120px;
     font-size: 14px;
+    display: flex;
 
     @media(max-width: 425px){
         padding: 6px 14px;
