--- a/components/v2/Form/styles.scss
+++ b/components/v2/Form/styles.scss
@@ -10,6 +10,7 @@
 #form_container {
     max-width: 360px;
     margin-left: 5%;
+    position: relative;
     
     .budget_button {
         width: 100%;
