[update] subindo alterações

--- a/components/v2/ProjectItem/styles.scss
+++ b/components/v2/ProjectItem/styles.scss
@@ -1,33 +1,29 @@
 .project_card {
-    width: 379px;
-    height: 493px;
+    width: 286px;
+    height: 373px;
     position: relative;
 
     &:hover {
         .mask {
             opacity: 1;
         }
+
+        .cover img {
+            scale: 1.1;
+        }
     }
 
     .cover {
         width: 100%;
         height: 100%;
+        overflow: hidden;
+        position: relative;
 
         img {
             object-fit: cover;
             width: 100%;
             height: 100%;
-            position: relative;
-
-            &::after {
-                content: '';
-                width: 100px;
-                height: 40px;
-                background-color: #00000096;
-                position: absolute;
-                left: 0;
-                top: 0;
-            }
+            transition: 500ms;
         }
     }
 
@@ -55,7 +51,6 @@
             gap: 14px;
             align-items: center;
             justify-content: center;
-            // flex: 1;
             height: 180px;
             
             button {
